# gojournal-proof

./: .gitignore  Makefile  README.md  dune-project  go.mod  go.sum  gojournal-proof.opam
.github/: dependabot.yml
.github/workflows/: ci.yml
etc/: update-goose.sh
src/program_proof/: dune
