opam-version: "2.0"
license: "MIT"
maintainer: "Tej Chajed"
authors: "Perennial authors"
homepage: "https://github.com/mit-pdos/gojournal-proof"
bug-reports: "https://github.com/mit-pdos/gojournal-proof/issues"
dev-repo: "git+https://github.com/mit-pdos/gojournal-proof.git"
version: "dev"
synopsis: "Verification of gojournal"

depends: [
  "perennial-old"
]

pin-depends: [
  ["perennial-old.dev"             "https://github.com/mit-pdos/perennial#4fdcb887ea"]
]

build: [make "-j%{jobs}%"]
install: ["go" "tool" "perennial-cli" "install"]
build-env: [
  [GOCACHE = "%{build}%/_build/.gocache"]
]
