opam-version: "2.0"
license: "MIT"
maintainer: "Tej Chajed"
authors: "Perennial authors"
homepage: "https://github.com/mit-pdos/gojournal-proof"
bug-reports: "https://github.com/mit-pdos/gojournal-proof/issues"
dev-repo: "git+https://github.com/mit-pdos/gojournal-proof.git"
version: "dev"
synopsis: "Verification of gojournal"

depends: [
  "perennial-old"
]

pin-depends: [
  ["perennial-old.dev"         "git+https://github.com/mit-pdos/perennial#ac2e8dca7b"]

  ## begin indirect
  ["coq-record-update.dev"     "git+https://github.com/tchajed/coq-record-update#7b26452103"]
  ["iris-named-props.dev"      "git+https://github.com/tchajed/iris-named-props#c388714a93"]
  ["rocq-iris.dev"             "git+https://gitlab.mpi-sws.org/iris/iris#d8f049ee6e"]
  ["rocq-stdpp.dev"            "git+https://gitlab.mpi-sws.org/iris/stdpp#a09c2a19de"]
  ## end
]

build: [make "-j%{jobs}%"]
install: ["go" "tool" "perennial-cli" "install"]
build-env: [
  [GOCACHE = "%{build}%/_build/.gocache"]
]
