opam-version: "2.0"
license: "MIT"
maintainer: "Tej Chajed"
authors: "Perennial authors"
homepage: "https://github.com/mit-pdos/gojournal-proof"
bug-reports: "https://github.com/mit-pdos/gojournal-proof/issues"
dev-repo: "git+https://github.com/mit-pdos/gojournal-proof.git"
version: "dev"
synopsis: "Program proofs for gojournal"

depends: [
  "perennial-old"
]

pin-depends: [
  ["perennial-old.dev"         "git+https://github.com/mit-pdos/perennial#0c86ef7efc1c60c90ae14c75edd1369fc346c0f6"]

  ## begin indirect
  ["coq-record-update.dev"     "git+https://github.com/tchajed/coq-record-update#7b2645210331c3ec4ed75fa5ad0840a723f25151"]
  ["iris-named-props.dev"      "git+https://github.com/tchajed/iris-named-props#c388714a93b1c043ed42a3f446280abd5113d26f"]
  ["rocq-iris.dev"             "git+https://gitlab.mpi-sws.org/iris/iris#d8f049ee6e28201a8781622ab4390a62c5293a85"]
  ["rocq-stdpp.dev"            "git+https://gitlab.mpi-sws.org/iris/stdpp#a09c2a19de6898fd470983ca2363ade519d70fe1"]
  ## end
]

build: ["dune" "build"]
install: ["dune" "install"]
